kubernetes/k8s-whoami/httpsgo.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpsgo
  labels:
    app: httpsgo
spec:
  type: ClusterIP
  ports:
  - port: 443
    protocol: TCP
    name: http
  selector:
    app: httpsgo
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: httpsgo-deployment
spec:
  selector:
    matchLabels:
      app: httpsgo
  replicas: 1
  template:
    metadata:
      labels:
        app: httpsgo
    spec:
      containers:
      - name: httpsgo
        image: veknet/httpsgo
        ports:
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: "/etc/secrets"
          readOnly: true
        - name: etc-grid-security
          mountPath: /etc/grid-security
      volumes:
      - name: secrets
        secret:
          secretName: httpsgo-secrets
      - name: etc-grid-security
        hostPath:
            path: /etc/grid-security
