kubernetes/k8s-whoami/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: "https"
#     traefik.ingress.kubernetes.io/pass-tls-cert: "true"
    traefik.ingress.kubernetes.io/pass-client-tls-cert: |
      pem: true
      infos:
        notafter: true
        notbefore: true
        sans: true
        subject:
          country: true
          province: true
          locality: true
          organization: true
          commonname: true
          serialnumber: true
          domaincomponent: true

spec:
  rules:
  - host: "whoami.web.cern.ch"
    http:
      paths:
#       - path: /
#         backend:
#           serviceName: httpgo
#           servicePort: 8888
      - path: /https
        backend:
          serviceName: httpsgo
          servicePort: 443
      - path: /http
        backend:
          serviceName: httpgo
          servicePort: 8888
  tls:
  - secretName: cluster-tls-cert
